--- a/partaci.html
+++ b/partaci.html
@@ -144,6 +144,16 @@
 
 <p><a href="http://www.probio.cz" target="_blank">www.probio.cz</a></p>
 
+
+<h4>Pozemkový úřad Nymburk</h4>
+
+<p>Pozemkové úřady mají mimo jiné na starosti realizaci pozemkových úprav. Ty jsou jedním z nejefektivnějších nástrojů, jak pomoci zemědělské krajině k tomu, aby byla zdravá a zároveň v ní mohli hospodařit zodpovědní zemědělci.</p>
+
+<p>CooLAND s Pozemkovým úřadem Nymburk spolupracuje při osvětě v oblasti pozemkových úprav a pořádá exkurze na realizovaná opatření v krajině.</p> 
+
+<p><a href="http://www.spucr.cz/" target="_blank">http://www.spucr.cz/</a></p>
+
+
 <h2>KOALICE A SÍTĚ</h2>
 
 <h4>Asociace místních potravinových iniciativ AMPI</h4>
@@ -234,3 +244,4 @@
   
 <div id="footer"></div>
 </html>
+
