--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
 <div id="main" class="container">
-  <img class="vernisaz" src="img/KPZCooLAND_vernisage.jpg"  width="" height="" alt="vernisaz">
+  <img class="vernisaz" src="img/HP_image.jpg"  width="" height="" alt="homepage_image">
 
   </div>
   <br>
