--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
 <div id="main" class="container">
-  <img class="vernisaz" src="img/Krajinka_Karel.jpg"  width="" height="" alt="homepage_image">
+  <img class="vernisaz" src="img/KPZ_otevrena_vrata_new.jpg"  width="" height="" alt="homepage_image">
 
   </div>
   <br>
