--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
 
 <div id="main" class="container">
   <img class="vernisaz" src="img/KPZ_otevrena_vrata_new.jpg"  width="" height="" alt="homepage_image">
+	<h1>INFORMACE A REGISTRACI NALEZNETE ZDE</h1>
+	<h2>INFORMACE A REGISTRACI NALEZNETE ZDE</h2>
+	<h3>INFORMACE A REGISTRACI NALEZNETE ZDE</h3>
 
   </div>
   <br>
