--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
 
 <div id="main" class="container">
   <img class="vernisaz" src="img/KPZ_otevrena_vrata_new.jpg"  width="" height="" alt="homepage_image">
-	<h1>INFORMACE A REGISTRACI NALEZNETE ZDE</h1>
-	<h2>INFORMACE A REGISTRACI NALEZNETE ZDE</h2>
-	<h3>INFORMACE A REGISTRACI NALEZNETE ZDE</h3>
+	
+	<h3><a target="_blank" href="https://docs.google.com/document/d/1tlNQzTd5gloEtpKNM7Ic3igjgx6CpnWL7SXkuIEyA9g/edit">INFORMACE A REGISTRACI NALEZNETE ZDE</a></h3>
 
   </div>
   <br>
