--- a/akce.html
+++ b/akce.html
@@ -43,8 +43,56 @@
 
 <div id="main" class="container">
 	
-<h4>17. září 2016/ Dětřichovice, Poznej svého farmáře u nás na Lukavě</h4>
+<h4>30. května - 8. června / Praha, Zvonařka - EnviroCity - komunitní festival pro život na Zvonařce</h4>
+<p>Podílíme se na realizaci komunitního festivalu pro život na Zvonařce, který představuje výsledky projektu COLridor na podporu oživení tohoto místa - důležitého biocentra v centru města Prahy.</p>
 
+<h4>24. května 2017 / Praha - Procházka Klíčovskými sady</h4>
+<p>Lektorujeme naučnou vycházku po ovocném Klíčovském sadu, tentokrát na téma „sad jako prostřený stůl”. Vycházka proběhla v rámci spolupráce CooLAND s organizací Na ovoce.</p>	
+	
+<h4>9. května 2017 / Praha, Z pokoje do pokoje - Potkávací den v pokojích</h4>
+<p>Potkávací den členů KPZ CooLAND v novém výdejním místě - veřejné nábytkové dílně Z pokoje do pokoje - při příležitosti zahájení nové sezóny.</p>	
+	
+<h4>2. května 2017 / Praha, Langhans - Centrum Člověka v tísni - Jedlá krajina</h4>
+<p>Pod názvem „Jedlá krajina - otevřete si restauraci pro včely” jsme uspořádali ve spolupráci s včelařským spolkem Mája tématický večer o včelách, jejich významu v ekosystému a důležitosti včelí pastvy.</p>	
+	
+<h4>1. května 2017 / Praha, Lysolajský sad, Májová vycházka</h4>
+<p>Lektorujeme naučnou vycházku po starém ovocném sadu, kde se návštěvníci dozvěděli zajímavosti nejen o historii sadu v Houslích, ale naučili se poznávat místní ptáky podle zpěvu. Vycházka proběhla v rámci spolupráce CooLAND s organizací Na ovoce.</p>	
+	
+<h4>5. dubna 2017 / Brno, Masarykova univerzita, konference Výkvěty 2017 - vernisáž výstavy</h4>
+<p>Naše výstava „Láska ke krajině prochází žaludkem” si udělala výlet do Brna, kde měla vernisáž na Fakultě sociálních studií Masarykovy univerzity.</p>	
+	
+<h4>15. března 2017 / Praha, Havran Café, Informační schůzka KPZ CooLAND</h4>
+<p>KPZ CooLAND se připravuje na svou třetí sezónu, a tak se v Havran Café schází koordinátoři, zemědělci i zájemci o členství. </p>
+	
+<h4>18. - 25. ledna 2017 / Výlet do Berlína</h4>
+<p>V rámci projektu „Vzdělávání pro přístup k půdě“ (Learning for Access to Land) proběhl první výměnný program, který pořádala organizace Die Agronauten v Berlíně. Zástupci organizací zabývající se přístupem k půdě pro začínající zemědělce z Německa, České republiky, Řecka, Rumunska a Skotska se společně zúčastnili šestidenního programu, který zahrnoval exkurze, síťování s ostatními účastníky a předávání informací o projektech. Součástí programu byla i účast na demonstraci „Wir haben es satt“. Hlavní část programu byla návštěva tří německých pozemkových spolků - BioBoden, Ökonauten a Kulturland: </p>
+<p><a href="http://www.accesstoland.eu/Learning-towards-Access-to-Land" target="_blank">http://www.accesstoland.eu/Learning-towards-Access-to-Land</a></p>	
+	
+<h4>9. prosince / Praha, Venuše ve Švehlovce - Fórum potravinové suverenity -</h4>
+<p>Potravinová suverenita podporuje všechny, které zajímá téma neudržitelnosti našeho zemědělsko-potravinářského systému. CooLAND samozřejmě nemůže chybět i jako jeden z leaderů vědecko-výzkumné pracovní skupiny: Přístup k půdě:</p>
+<p><a href="https://potravinovasuverenita.cz/akce/" target="_blank">https://potravinovasuverenita.cz/akce/</a></p>	
+	
+<h4>9. listopadu / Praha, Smart Café – Krajina k nakousnutí</h4>
+<p>Mluvíme o tom, jakým způsobem spotřebitelé ve městě ovlivňují podobu venkovské krajiny a jaké alternativy existují pro naši každodenní volbu potravin. Diskuze proběhla společně se zástupci iniciativy Na ovoce: </p>
+<p><a href="http://www.zelenykruh.cz/na-cem-pracujeme/smart-cafe/smart-cafe-krajina-k-nakousnuti" target="_blank">http://www.zelenykruh.cz/na-cem-pracujeme/smart-cafe/smart-cafe-krajina-k-nakousnuti</a></p>	
+	
+<h4>8. listopadu 2016 / Havran Café, Večírek KPZ CooLAND – rekapitulace sezóny</h4>
+<p>Při příležitosti posledního výdeje v sezóně pořádáme večírek s rekapitulací toho, co se událo a jaké jsou naše plány na příští rok.</p>
+	
+<h4>22. října 2016 / Praha, Menu pro změnu</h4>
+<p>Ve spolupráci s Glopolis jsme přispěli k šíření myšlenky komunitou podporovaného zemědělství na mezinárodním fóru Menu pro změnu:</p>
+<p><a href="https://www.eatresponsibly.eu/cs/news/menu-for-change-international-forum/" target="_blank">https://www.eatresponsibly.eu/cs/news/menu-for-change-international-forum/</a></p>	
+
+<h4>22. října 2016 / Praha, Veletržní palác, Fotograf festival</h4>
+<p>Země/Půda neboli komponovaný večer věnovaný jak jinak než vztahu k Zemi a vztahu k půdě, to vše pod hlavičkou letošního ročníku s názvem Cultura/Natura. CooLAND představil nejen dění kolem KPZ , ale mimo jiné i publikaci “Láska ke krajině prochází žaludkem”.
+</p>
+<p><a href="http://fotografestival.cz/2016/event/zeme-puda" target="_blank">http://fotografestival.cz/2016/event/zeme-puda</a></p>
+
+<h4>17. - 23. října 2016 / Praha, Česká zemědělská univerzita v Praze</h4>
+<p>Již tradiční dokumentární festival, na němž se potkávají filmaři a zajímavá témata z celého světa. Na festivalu se každým rokem podílíme i organizačně a na letošním ročníku jsme měli velkou radost z vítězného snímku Farmáři půdy <a href="http://lsff.cz/joris-van-der-kamp-farmari-pudy/" target="_blank">http://lsff.cz/joris-van-der-kamp-farmari-pudy/</a>ve kterém to jen srší nápady, jak zacházet s půdou a zároveň si skvěle pochutnat. 
+</p>
+	
+<h4>17. září 2016/ Dětřichovice, Poznej svého farmáře u nás na Lukavě</h4>
 <p>Chystáme se podpořit farmu Lukava při jejím velkém dni otevřených dveří pořádaných v rámci kampaně Ministerstva zemědělství “Poznej svého farmáře”. </p>
 <p><a href="http://www.lukava.net/poznej-sveho-farmare-u-nas-na-lukave/" target="_blank">http://www.lukava.net/poznej-sveho-farmare-u-nas-na-lukave/</a></p>
 
