--- a/akce.html
+++ b/akce.html
@@ -89,7 +89,7 @@
 <p><a href="http://fotografestival.cz/2016/event/zeme-puda" target="_blank">http://fotografestival.cz/2016/event/zeme-puda</a></p>
 
 <h4>17. - 23. října 2016 / Praha, Česká zemědělská univerzita v Praze</h4>
-<p>Již tradiční dokumentární festival, na němž se potkávají filmaři a zajímavá témata z celého světa. Na festivalu se každým rokem podílíme i organizačně a na letošním ročníku jsme měli velkou radost z vítězného snímku Farmáři půdy <a href="http://lsff.cz/joris-van-der-kamp-farmari-pudy/" target="_blank">http://lsff.cz/joris-van-der-kamp-farmari-pudy/</a>ve kterém to jen srší nápady, jak zacházet s půdou a zároveň si skvěle pochutnat. 
+<p>Již tradiční dokumentární festival, na němž se potkávají filmaři a zajímavá témata z celého světa. Na festivalu se každým rokem podílíme i organizačně a na letošním ročníku jsme měli velkou radost z vítězného snímku Farmáři půdy <a href="http://lsff.cz/joris-van-der-kamp-farmari-pudy/" target="_blank">http://lsff.cz/joris-van-der-kamp-farmari-pudy/</a>, ve kterém to jen srší nápady, jak zacházet s půdou a zároveň si skvěle pochutnat. 
 </p>
 	
 <h4>17. září 2016/ Dětřichovice, Poznej svého farmáře u nás na Lukavě</h4>
