--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <div id="main" class="container">
   <img class="vernisaz" src="img/KPZ_otevrena_vrata_new.jpg"  width="" height="" alt="homepage_image">
 	
-	<h3><a target="_blank" href="https://docs.google.com/document/d/1tlNQzTd5gloEtpKNM7Ic3igjgx6CpnWL7SXkuIEyA9g/edit">INFORMACE A REGISTRACI NALEZNETE ZDE</a></h3>
+	<h4 text-align="center"><a target="_blank" href="https://docs.google.com/document/d/1tlNQzTd5gloEtpKNM7Ic3igjgx6CpnWL7SXkuIEyA9g/edit">INFORMACE A REGISTRACI NALEZNETE ZDE</a></h4>
 
   </div>
   <br>
