--- a/index.html
+++ b/index.html
@@ -43,10 +43,8 @@
 
 
 <div id="main" class="container">
-  <img class="vernisaz" src="img/KPZ_otevrena_vrata_new.jpg"  width="" height="" alt="homepage_image">
+  <img class="vernisaz" src="img/Mak.jpg"  width="" height="" alt="homepage_image">
 	
-	<h4 class="vernisaz_info"><a target="_blank" href="https://docs.google.com/document/d/1tlNQzTd5gloEtpKNM7Ic3igjgx6CpnWL7SXkuIEyA9g/edit">INFORMACE A REGISTRACI NALEZNETE ZDE</a></h4>
-
   </div>
   <br>
   <br>
