--- a/sarka.html
+++ b/sarka.html
@@ -67,16 +67,16 @@
 
 <h5>V CooLAND mám na starosti:</h5>
 
-  <p>Různorodé předchozí pracovní zkušenosti se v CooLAND hodí, a proto jsem taková „holka pro všechno“, která umí organizovat, trochu fotit a psát, analyzovat data, prezentovat je, ale dělat efektivně i ty nudné „tabulky“, organizační a administrativní práci na pozadí. V současné chvíli jsem především koordinátor našeho projektu komunitou podporovaného zemědělství <a href="https://plus.google.com/u/0/communities/101783831094360976826" target="_blank">KPZ CooLAND</a> a s tím souvisejících aktivit. Organizuji akce CooLAND, píšu příspěvky na náš blog i jinam a podílím se na naší „vědecko-výzkumné“ činnosti, kterou chceme postupně rozvíjet.</p>
+  <p>Různorodé předchozí pracovní zkušenosti se v CooLAND hodí, a proto jsem taková „holka pro všechno“, která umí organizovat, trochu fotit i psát, analyzovat data, prezentovat je, ale dělat efektivně i ty nudné „tabulky“, organizační a administrativní práci na pozadí. V současné chvíli jsem především koordinátorka našeho projektu komunitou podporovaného zemědělství <a href="https://plus.google.com/u/0/communities/101783831094360976826" target="_blank">KPZ CooLAND</a> a s tím souvisejících aktivit. Organizuji akce CooLAND, píšu příspěvky na náš blog i jinam a podílím se na naší „výzkumné“ činnosti, kterou chceme postupně rozvíjet.</p>
 
   <h5>Mimo CooLAND dělám:</h5>
 
-  <p>Jsem zaměstnaná na Fakultě životního prostředí ČZU v Praze, kde působím na Katedře aplikované geoinformatiky a územního plánování zejména v roli organizátora výukových i dalších aktivit a chodu katedry. Dále se do určité míry zabývám výzkumem, jehož téma souvisí s držbou půdy a jejím vlivem na krajinu.</p>
+  <p>Jsem zaměstnaná na Fakultě životního prostředí ČZU v Praze, kde působím na Katedře aplikované geoinformatiky a územního plánování zejména v roli organizátorky výukových i dalších aktivit a chodu katedry. Dále se do určité míry zabývám výzkumem, jehož téma souvisí s držbou půdy a jejím vlivem na krajinu. </p>
 <p><a href="https://www.researchgate.net/profile/Sarka_Krcilkova" target="_blank">Research Gate</a></p>
 
 <h5>Spolupracuji:</h5>
 
-  <p>Léta jsem členem <a href="http://mjstudio.info/" target="_blank">MJ studia - tanečního studia Milany Ježkové</a>, kde už sice nepůsobím jako aktivní tanečnice, ale stále pomáhám vydávat <a href="http://mjstudio.info/casopis.html" target="_blank">Časopis MJ studia</a>.</p> 
+  <p>Jsem součástí <a href="http://asociaceampi.cz/" target="_blank">Asociace místních potravinových iniciativ</a> v oblasti rozvoje <a href="http://kpzinfo.cz/" target="_blank">komunitou podporovaného zemědělství</a>. Léta jsem členem <a href="http://mjstudio.info/" target="_blank">MJ studia - tanečního studia Milany Ježkové</a>, kde už sice nepůsobím jako aktivní tanečnice, ale stále pomáhám vydávat <a href="http://mjstudio.info/casopis.html" target="_blank">Časopis MJ studia</a>.</p> 
  
  </div>  
   <br>
