--- a/akce.html
+++ b/akce.html
@@ -43,6 +43,28 @@
 
 <div id="main" class="container">
 	
+<h4>24. září 2017 / Praha, Festival dokumentárních filmů Země na talíři</h4>
+<p>Přijali jsme pozvání do odborné debaty po promítání filmu <a href="https://www.altart.cz/program/buzz-talks-mrtvi-osli-se-hyen-neboji/" target="_blank">Mrtví osli se hyen nebojí</a> o významu půdy a složitém přístupu k ní pro některé obyvatele nejen v rozvojových zemích, ale také v České republice.</p>
+
+<h4>16. září 2017 / Praha, Zažít Karlín jinak - Křižíkova, CooLAND u jednoho stolu</h4>
+<p>Se stánkem “CooLAND u jednoho stolu” jsme se zúčastnili sousedských oslav Zažít Karlín jinak, abychom návštěvníkům připomněli, že jídlo a stav zemědělské krajiny i venkova spolu úzce souvisí.</p>	
+	
+<h4>22. července 2017 / Jindřichovice pod Smrkem, Den otevřených vrat na Rodinné farmě Lukava</h4>
+<p>Den otevřených vrat pro podílníky z KPZ CooLAND a KPZ Mezi domy. Přečtěte si na blogu 
+příspěvek <a href="http://blog.cooland.cz/2ew16f9rt" target="_blank">Život na rodinné ekofarmě? Je to jednoduché, ale není to snadné.</a></p>	
+	
+<h4>30. června 2017 / Říčany, Zahrada hmyzích přátel</h4>
+<p>Exkurze na zahradu, která nabízí příjemný prostor nejen pro lidi, ale zároveň je “ozdravovnou”  pro včely, hmyz a další živočichy z okolí. Přečtěte si na blogu příspěvek <a href="http://blog.cooland.cz/7bpbcfbr4" target="_blank">Zahrada hmyzích přátel</a>.</p>		
+
+<h4>18. června 2017 / Hájek u Kutné Hory, Víkend otevřených vrat na hospodářství Ondřeje Sokače</h4>
+<p>Exkurze na hospodářství Ondřeje Sokače, který se ve spolupráci s námi snaží nastartovat svou novou KPZku. Fotoreportáž z exkurze najdete <a href="https://photos.app.goo.gl/3Kir3zyOXIIkjPUm1" target="_blank">zde</a>.</p>	
+	
+<h4>17. června 2017 / Budyně nad Ohří, Víkend otevřených vrat na statku u Karla Tachecího</h4>
+<p>“Rodina” podílníků kolem statku Karla Tachecího se rozrůstá. Během víkendu otevřených vrat se zde sešlo více než třicet lidí. Fotoreportáž ze setkání najdete <a href="https://goo.gl/photos/MQBH7xuaiBiYRn3K8" target="_blank">zde</a>.</p>	
+	
+<h4>16. června 2017 / Jindřichovice pod Smrkem, Rodinná farma Lukava, natáčení Nedej se</h4>
+<p>CooLAND se podílel na tvorbě dokumentárního filmu o problematice ochrany půdy a zemědělské krajiny a aktivitách <a href="http://nadacepropudu.cz/" target="_blank">Nadace pro půdu</a>, se kterou dlouhodobě spolupracujeme. <a href="http://www.ceskatelevize.cz/porady/1095913550-nedej-se/217562248420014-nadace-pro-pudu/" target="_blank">Snímek s názvem Nadace pro půdu</a> můžete vidět v archivu České televize.</p>
+	
 <h4>30. května - 8. června / Praha, Zvonařka - EnviroCity - komunitní festival pro život na Zvonařce</h4>
 <p>Podílíme se na realizaci komunitního festivalu pro život na Zvonařce, který představuje výsledky projektu COLridor na podporu oživení tohoto místa - důležitého biocentra v centru města Prahy.</p>
 
