--- a/radim.html
+++ b/radim.html
@@ -28,7 +28,7 @@
 			<div class="nav__left">
 								<a href="/o_nas" class="	">O nás</a>
 								<a href="/vize" class="">Vize</a>
-								<a href="/projekty" class="">Projekty</a>				
+								<a href="/nabizime" class="">Nabízíme</a>				
 			</div>
 			
             <div class="nav__right">
