--- a/vize.html
+++ b/vize.html
@@ -44,39 +44,17 @@
 <div id="main" class="container">
  
  
-<h3>CooLAND  = Průvodce zodpovědného správce krajiny</h3>
+<h3>CooLAND je spolek pro ochranu zemědělské krajiny.</h3>
 
-<p>Vizí CooLAND je pestrá zemědělská  krajina, která se současně stává i životním prostorem pro zodpovědné lidi, jejichž aktivity krajinu utvářejí. Taková zemědělská krajina pulzuje rozmanitým životem a utváří příběhy lidí, rostlin a živočichů.</p>
+<p>Jsme spolek pěti nezávislých odborníků z oblasti krajinné ekologie, které spojuje společná vize.</p>
 
-<p>CooLAND je nevládní nezisková organizace složená z odborníků z oblasti krajinné ekologie, které spojuje snaha o zlepšení stavu zemědělské krajiny. Chceme, aby si lidé uvědomili, jak jednoduše mohou zlepšit její kondici. Vyhledáváme, prezentujeme a vytváříme aktivity, které pozitivně ovlivňují fungování zemědělské krajiny.  Působíme na celém území České republiky s mezinárodní spoluprací.</p>
+<p>Naší <b>vizí</b> je zdravá zemědělská krajina.</p>
 
-<p>Naším mottem je: <em>Cesta do krajiny vede kolem vás.</em></p>
+<p>Naším <b>posláním</b> je být odborným a profesionálním poradcem v oblasti ochrany zemědělské krajiny.</p>
 
-<p>CooLAND je průvodcem pro všechny, kteří se chtějí podílet na zlepšení stavu zemědělské krajiny. Zaměřujeme se na veřejnost, neziskový sektor, vzdělávací instituce, státní správu, podnikatelské subjekty, vědu a výzkum, média, zemědělce, projektanty.</p>
+<p>Aktivity našeho spolku mají dva hlavní <b>cíle</b>. Prvním z nich je přesunout aktivitu a pozornost lidí do zemědělské krajiny. Druhým cílem je pomáhat vytvářet a chránit zdravou zemědělskou krajinu.</p>
 
-<h3>Hlavní cíle CooLAND</h3>
-
-<h4><strong>1 - Propojení s praxí</strong></h4>
-
-<p>Vyhledáváme, podporujeme, a spolupracujeme s lidmi i organizacemi, které přispívají nebo chtějí aktivně přispět k ochraně zemědělské krajiny a rozvoji venkova jako takového.</p>
-
-<p>Co to konkrétně znamená?</p>
-<p>Spolupracujeme se zemědělci, kteří hospodaří s úctou k půdě a krajině. Podporujeme a pomáháme těm, kteří sami mají zájem začít hospodařit na zemědělské půdě. Šíříme myšlenku komunitou podporovaného zemědělství (KPZ) a potravinové soběstačnosti. Založili jsme vlastní <a href="https://plus.google.com/u/0/communities/101783831094360976826" target="_blank">KPZ CooLAND</a>  = řešení pro nemocná pole a louky cestou chuťových zážitků pro vaše jazýčky. Upozorňujeme na to, že to co jíme, ovlivňuje významně podobu zemědělské krajiny. Krajina je obrazem lidí, kteří v ní žijí. Vědomě či nevědomě svými činy ovlivňujeme její podobu každý den. Pokud se chcete dozvědět, jaký vliv mají zemědělec - státní úředník - myslivec - vlastník pozemku - mrkev či čejka na podobu krajiny, CooLAND Vám rád poradí.</p>
-
-<h4><strong>2 - Vzdělávání a popularizace</strong></h4>
-
-<p>Kdo chce něco změnit, musí začít sám u sebe. Proto se vzděláváme, <a href="https://www.facebook.com/cestadokrajiny" target="_blank">inspirujeme</a> a nabyté zkušenosti předáváme dál na seminářích a akcích, které pořádáme sami nebo ve spolupráci s <a href="/partaci">dalšími organizacemi</a> i jednotlivci. Orientujeme se jak na laickou, tak i odbornou veřejnost. Hledáme nové cesty, jak lidem lépe přiblížit a vysvětlit problematiku ochrany přírody a krajiny.</p>
-
-<p>Co to konkrétně znamená?</p> 
-<p>Vyhledáváme a ukazujeme pozitivní příklady z domova i ze zahraničí. Píšeme příspěvky, které publikujeme prostřednictvím <a href="http://blog.cooland.cz/" target="_blank">vlastního blogu</a>, ale i dalších médií jako jsou odborné časopisy. Účastníme se diskuzí v rámci různorodých veřejných akcí. Připravujeme vlastní semináře, přednášky a setkání. Jako lektoři spolupracujeme na přípravě seminářů <a href="/partaci">s dalšími organizacemi.</a></p>
-
-<h4><strong>3 - Věda a výzkum</strong></h4>
-
-<p>Pokud chceme šířit nové myšlenky o ochraně přírody a krajiny, je potřeba sledovat nejen nejnovější poznatky u nás i v zahraničí, ale i zpracovávat vlastní vědecké studie, které svými výsledky přispějí k rozšíření informací o problematice ochrany zemědělské krajiny.</p> 
-
-<p>Co to konkrétně znamená?</p>
-<p>Spolupracujeme na přípravě a zpracování výzkumných projektů s <a href="https://www.fzp.czu.cz/cs/" target="_blank">Fakultou životního prostředí České zemědělské univerzity v Praze</a>, jejichž cílem je nejen rozvoj místních potravinových komunit, ale i ochrana přírody a krajiny. Jsme součástí <a href="http://urgenci.net/csa-research-group-people" target="_blank">CSA Research Group</a> a evropské sítě <a href="http://www.accesstoland.eu/" target="_blank">Access to Land.</a></p>
-  
+<p>Spolupracujeme s těmi a propojumeme ty, kdo se o zemědělskou krajinu zodpovědně starají. Zpracováváme projekty, které zemědělské krajině k jejímu zdraví pomáhají, píšeme odborné studie o aktuální problematice ochrany krajiny a zároveň tato témata přibližujeme veřejnosti.</p>
   
   </div>
 </body>
