--- a/nabizime.html
+++ b/nabizime.html
@@ -44,49 +44,52 @@
 
 <div id="main" class="container text_justify">
   
-<p>Nelíbí se Vám velké lány orné půdy bez známky života? Jste smutní z toho, že už nemůžete házet flintu do žita, ale pouze do kukuřice či řepky?</p>
+<h3>Nabízené služby</h3>
+<p>Nabízíme kvalitní a erudované služby pro podporu zdravé zemědělské krajiny.</p>
 
-<p>Pojďte společně s námi přispět k obnově krajinotvorných prvků v zemědělské krajině, návratu původních plodin (například žita) a podpoře zodpovědných hospodářů v krajině.</p>
-
-<p>Pojďte najít způsob, jak přispět k tvorbě pestré zemědělské krajiny, která se současně stane i životním prostorem pro všechny. CooLAND témata jsou naším společným průvodcem na cestě do krajiny.</p> 
-
-<h3>Program na zlepšení kondice zemědělské krajiny</h3>
-
-<p>Zdravá a funkční zemědělská krajina je základem zdraví náš všech. Pro zlepšení její kondice krajinní ekologové doporučují, aby se do jejího fitness programu zase přidaly krajinotvorné prvky. Pojďte společně s CooLAND podpořit pomocné služby těchto krajinotvorných parťáků zemědělské půdy, jakými jsou například aleje, solitérní stromy, remízky, tůně a další prvky, které pomohou nejen vykouzlit na její tváři nové, veselé barvy, ale zajistí, že opět bude schopna podávat nejlepší výkony. Krajina má ráda obecenstvo, proto neváhejte fandit s námi. Cesta do krajiny vede kolem vás.</p>
-
-<h4>Jak na to?</h4>
+<p>Zdravá zemědělská krajina je obsáhlé a komplexní téma a my vás rádi provedeme těmito oblastmi:</p>
 <ul>
-<li>Nemáte zkušenosti s ozdravným programem pro krajinu? Nevíte, jak se stát jejím skalním fanouškem?</li>
+<li>zlepšení a zachování kondice zemědělské krajiny - výsadba, obnova a péče o <a href="http://eagri.cz/public/web/mze/legislativa/pravni-predpisy-mze/tematicky-prehled/101736829.html" target="_blank">krajinotvorné prvky (zelené součásti)</a>, retence vody v krajině, obnova polních cest</li>
+<li><a href="http://www.accesstoland.eu/" target="_blank">přístup k půdě pro agroekologické zemědělce</a></li>
+<li><a href="http://kpzinfo.cz/" target="_blank">založení a správa KPZ (komunitou podporované zemědělství)</a></li>
 </ul>
 
-<p>Tým CooLAND vám připraví pro inspiraci přednášku, seminář, nebo vás vezme na exkurzi tam, kde se krajina vrátila ke své plné síle. Rádi zpracujeme krajinářský projekt přímo šitý na míru vaší krajině podle jejích aktuálních potřeb. Zjistíme, kdo jsou její parťáci - rostliny, živočichové, krajinotvorné prvky -  a jaké by ještě ráda do svého týmu přibrala. Nebojíme se GIS nástrojů, nejnovějších legislativních hlavolamů, ani nových grantových výzev. Používáme aktuální a certifikované metody a těžíme z bohatých zkušeností.</p> 
+<p>Všechny naše služby vycházejí vždy z lokálních podmínek a jsou vytvářeny na míru vašim požadavkům v souladu s přírodou.</p> 
 
+<p>Naše služby poskytujeme vlastníkům pozemků, zemědělcům, ochráncům přírody, samosprávám, investorům a všem dalším zájemcům o zdravou zemědělskou krajinu.</p>
 
-<h3>Společníci pro půdu - Přístup k půdě (Access to Land)</h3>
+<p><b>Poradenství</b> - Rádi s vámi najdeme cestu, jak docílit zdravé krajiny přímo ve vaší lokalitě. Přijedeme k vám a vše potřebné s vámi probereme přímo v terénu. Neváhejte se ozvat, rádi se za vámi vypravíme a vymyslíme řešení přímo pro vás a vaše okolí.</p> 
 
-<p>Přístupem k půdě nemyslíme mít doma žebřík opřený o střechu. Jedná se o místo k zabydlení nejen pro zemědělce, ale i pro krajinotvorné prvky. Naším klientem je zemědělská půda hledající zodpovědné hospodáře, kteří o ni budou pečovat s respektem, a spolehlivé parťáky, kteří jí pomohou zachovat její přirozené funkce, jakými jsou např. zadržení vody či prostor pro půdní organismy.</p>
+<p><b>Projekty</b> - Pokud už máte vlastní vizi zdravé zemědělské krajiny a potřebujete ji odborně a technicky zhmotnit, zpracujeme pro vás dle zadání studii, projekt, nebo vizualizaci vašeho záměru. Zajistíme potřebné podklady pro územní rozhodnutí, nebo dotační tituly.</p>
 
-<h4>Jak na to?</h4>
-<ul>
-<li>Jste vlastníkem zemědělské půdy a hledáte nové, zodpovědné nájemníky či kupce?</li>
-<li>Chcete podpořit parťáky zemědělské půdy a rádi poskytnete své pozemky například na obnovu alejí, remízků či tůní?</li>
-<li>Chcete se sami stát zodpovědným správcem zemědělské půdy, ovšem nemáte žádné pozemky?</li>
-</ul>
+<p><b>Vzdělávání</b> - Rádi pro vás připravíme přednášky, semináře, diskuze či celodenní workshopy. Pokud máte raději praktickou ukázku, připravíme pro vás komentovanou exkurzi přímo v terénu, kde vám ukážeme principy fungování zdravé zemědělské krajiny a vysvětlíme postupy, jak takového stavu dosáhnout.</p>
 
-<p>Tým CooLAND vám pomůže zprostředkovat dohodu výhodnou pro všechny účastníky.</p>
+<p><b>Expertní činnost</b> - Nabízíme expertní a rešeršní služby v oblasti ochrany a péče o zemědělskou krajinu. Rádi vás i propojíme s dalšími odborníky, kteří se zabývají vámi požadovanými tématy.</p>
 
-<h3>Fun club zemědělské krajiny - Komunitou podporované zemědělství</h3>
+<h3>Ceník služeb</h3>
 
-<p>Podpořit zodpovědné hospodáře, kteří vytvořili partnerský vztah se zemědělskou půdou či fandit jejím parťákům pomáhajícím udržet dobrou kondici krajiny můžete i v pohodlí svého domova. Nezáleží na tom, zda žijete ve městě či na venkově, nebo jakou číslovku máte v občance. Svým každodenním chováním můžete významně ovlivnit nejen návrat žita na pole, abyste měli zase kam házet flinty, ale i jiné původní plodiny bez zbytečné chemie. Svačina, kterou si k fandění přibalíte, významně ovlivňuje tvář krajiny. Velkým pomocníkem při fandění je právě mlsný jazýček každého z nás. Láska ke krajině totiž prochází žaludkem.</p>
+<p>Veškeré ceny jsou kalkulovány vždy <strong>individuálně</strong> vzhledem k lokálním podmínkám, náročnosti práce a termínu vyhotovení.</p>
 
-<h4>Jak na to?</h4>
-<ul>
-<li>Oceňujete stejně jako my zodpovědně hospodařící ekologické zemědělce, kteří o půdu pečují s respektem a tím přispívají k udržení kondice krajiny na vysoké úrovni, ale sami se takovými “trenéry” nechcete stát?</li>
-<li>Fandíte raději v pohodlí svého domova z gauče?</li>
-<li>Jste ekologický zemědělec a hledáte nové fanoušky do svého týmu?</li>
+<p>V případě zájmu nás neváhejte kontaktovat emailem na adrese info@cooland.cz, anebo piště přímo našim odborníkům na daná témata.</p>
 
-<p>Tým CooLAND vám pomůžeme najít si svého zodpovědného hospodáře a založit si svoji fungující fandící skupinu, která jej bude podporovat nejen finančně, ale i morálně. Rádi pomůžeme i zemědělcům vytvořit jejich vlastní fun club, aby se brzy mohli přidat do skupiny: <strong>Zodpovědní společníci zemědělské krajiny</strong>.</p>
-  
+<h3>Orientační ceny</h3>
+<h4>Poradenství:</h4>
+
+<p>Úvodní konzultace paušálně 700,- včetně všech nákladů.</p>
+<p>Následující konzultace dle hodinové sazby 500,-/hodinu + cestovní náklady.</p>
+
+<h4>Projekty:</h4>
+
+<p>Odborné zpracování (návrhy, vizualizace, technické výkresy): 500,-/hod</p>
+<p>Administrativa (dokumentace, jednání s úřady, inženýring): 300,-/hod</p>
+
+<h4>Vzdělávání:</h4>
+
+<p>Vedení odborné exkurze v rozsahu několika hodin (zahrnuje přípravu, vedení exkurze a dopravu lektora): 2500,-</p>
+<p>Vedení odborné exkurze na celý den (zahrnuje přípravu, vedení exkurze a dopravu lektora): 5000,-</p>
+<p>Lektorování, přednášky: 500,-/hod</p>
+<p>Příprava exkurze na míru: 500,-/hod</p>
+	
   </div>
 </body>
   
