--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
 
 
 <div id="main" class="container">
-  <img class="vernisaz" src="img/Podzim_uprava.jpg"  width="" height="" alt="homepage_image">
+  <img class="vernisaz" src="img/Letos_SKLIZENO_2017.jpg"  width="" height="" alt="homepage_image">
+	<h3>V případě zájmu o účast na akci se, prosím, <a href="https://docs.google.com/forms/d/e/1FAIpQLSdefLzf5afRb2C1DEM4d7X39hSz_Fj2qwX5sdQ2yJdEkRfWXg/viewform" class="">registrujte zde</a>. DÍKY!</h3>
 	
   </div>
   <br>
