--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <div id="main" class="container">
   <img class="vernisaz" src="img/Letos_SKLIZENO_2017.jpg"  width="" height="" alt="homepage_image">
-	<h3>V případě zájmu o účast na akci se, prosím, <a href="https://docs.google.com/forms/d/e/1FAIpQLSdefLzf5afRb2C1DEM4d7X39hSz_Fj2qwX5sdQ2yJdEkRfWXg/viewform" class="">registrujte zde</a>. DÍKY!</h3>
+	<h4>V případě zájmu o účast na akci se, prosím, <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSdefLzf5afRb2C1DEM4d7X39hSz_Fj2qwX5sdQ2yJdEkRfWXg/viewform" class="">registrujte zde</a>. DÍKY!</h4>
 	
   </div>
   <br>
