--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
 <div id="main" class="container">
-  <img src="img/PF2018_CooLANDweb.jpg" width="" height="" alt="homepage_image">
+  <img src="img/PF2018_CooLANDweb.jpg?v2" width="" height="" alt="homepage_image">
 	<p><em>Meziprostory. Tam, kde se potkávají různorodé světy. Tam vzniká zároveň stabilita a rozmanitost, ale i krása a rovnováha.</em><br>
     Martin Ott - Gut Rheinau</p>
 	
