--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
 
 
 <div id="main" class="container">
-  <img src="img/PF2018_CooLANDweb.jpg?v2" width="" height="" alt="homepage_image">
-	<p><em>Meziprostory. Tam, kde se potkávají různorodé světy. Tam vzniká zároveň stabilita a rozmanitost, ale i krása a rovnováha.</em><br>
-    Martin Ott - Gut Rheinau</p>
+  <img src="img/PF_2019_CooLAND.jpg" width="" height="" alt="homepage_image">
+	
 	
 </div>
 <br>
