--- a/o_nas.html
+++ b/o_nas.html
@@ -110,9 +110,11 @@
 </div>
 
 <div class="responsive2">
+<div class="img"><div class="desc">
   <img src="img/Liska6.png" alt="Liška" width="150" height="" alt="Výroční zprávy">
   <p><a href="/img/vyrocka2016_finish.pdf">výroční zpráva 2016</a></p>
   <p><a href="/img/priloha_v%20_ucetni_zaverce_2017.pdf">účetní závěrka 2017</a></p>
+</div></div>
 </div>
 
 </div>
