--- a/o_nas.html
+++ b/o_nas.html
@@ -109,8 +109,8 @@
 </div>
 </div>
 
-<div class="responsive2">
-  <img src="img/Liska6.png" alt="Liška" width="150" height="" alt="Výroční zprávy">
+<div class="responsive" style="text-align: center;">
+  <img src="img/Liska6.png" alt="Výroční zprávy" style="max-height: 185px;">
   <div class="desc">
     <p><a href="/img/vyrocka2016_finish.pdf">výroční zpráva 2016</a></p>
     <p><a href="/img/priloha_v%20_ucetni_zaverce_2017.pdf">účetní závěrka 2017</a></p>
