--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 
 <div id="main" class="container">
-  <img src="img/PF_2019_CooLAND.jpg" width="" height="" alt="homepage_image">
+  <img src="img/Laska_web.jpg" width="" height="" alt="homepage_image">
 	
 	
 </div>
