--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <div id="main" class="container">
   <img src="img/Laska_web.jpg" width="" height="" alt="homepage_image">
-	
+  <a href="https://blog.cooland.cz/post/183495582384/l%C3%A1ska-ke-krajin%C4%9B-m%C3%AD%C5%99%C3%AD-do-karl%C3%ADna">Láska ke krajině míří do Karlína</a>	
 	
 </div>
 <br>
