--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <table class="noborder"><tbody>
           <tr><td class="label">Facebook</td><td><a target="_blank" href="https://www.facebook.com/cestadokrajiny">https://www.facebook.com/cestadokrajiny</a></td></tr>
           <tr><td class="label">Blog</td><td><a target="_blank" href="http://blog.cooland.cz">blog.cooland.cz</a></td></tr>
-          <tr><td class="label">Tumblr</td><td><a target="_blank" href="https://kpzcooland.tumblr.com/>KPZ CooLAND</a></td></tr>
+          <tr><td class="label">Tumblr</td><td><a target="_blank" href="https://kpzcooland.tumblr.com/">KPZ CooLAND</a></td></tr>
         </tbody></table>
       </div>        
 <p>&nbsp;</p>
