--- a/alena.html
+++ b/alena.html
@@ -72,12 +72,12 @@
 
   <h5>Mimo CooLAND dělám:</h5>
 
-  <p>Mimo CooLAND pracuji na veřejné vysoké škole na pozici projektového manažera a lektora, kterého ale v prvé řadě baví propojovat lidi a jejich myšlenky. Nejen nacházením možných inspirací, ale i snahou společně aktivně přispět a utvářet prostředí pro realizaci skutečných nápadů k zlepšení kvality komunitního života, vzdělání i rozvoje aplikovaného výzkumu pro potřeby společnosti.</p>
+  <p>Mimo CooLAND pracuji v Asociaci potravinových iniciativ na pozici projektového manažera, kterého v prvé řadě baví propojovat lidi a jejich myšlenky. Nejen nacházením možných vzájemných inspirací a příkladů dobré praxe z tuzemska i zahraničí, ale i snahou společně aktivně přispět a utvářet prostředí pro realizaci skutečných nápadů k zlepšení kvality komunitního života, vzdělání i rozvoje aplikovaného výzkumu pro potřeby společnosti a samozřejmě zemědělské krajiny.</p>
 <p>Zajímám se o dobrovolnictví, filantropii, sociální podnikání a inovace.</p>
 
 <h5>Spolupracuji:</h5>
 
-  <p>Jsem členem <a href="http://www.cski-cr.cz/" target="_blank">České společnosti krajinných inženýrů</a> a externím hodnotitelem <a href="http://www.msmt.cz/strukturalni-fondy-1/op-vvv" target="_blank">Operačního programu Výzkum, vývoj a vzdělávání</a> při MŠMT. V rámci mezinárodní sítě koordinované <a href="http://www.unep.org/" target="_blank">UNEP</a> spolupracuji na projektu věnovaném problematice <a href="http://themooc.net/" target="_blank">Disasters and Ecosystems: Resilience in a Changing Climate</a>.</p> 
+  <p>Díky práci v AMPI mám možnost “nakukovat pod pokličku” rozvoji <a href="http://http://nadacepropudu.cz/" target="_blank">Nadace Pro půdu.</a> Jsem členem <a href="http://http://www.cski-cr.cz/" target="_blank">České společnosti krajinných inženýrů.</a> V rámci mezinárodní sítě koordinované <a href="http://www.unep.org/" target="_blank">UNEP</a> se dlouhodobě účastním projektu věnovaném problematice <a href="http://themooc.net/" target="_blank">Disasters and Ecosystems: Resilience in a Changing Climate</a>.</p> 
  
  </div>  
   <br>
