--- a/sarka.html
+++ b/sarka.html
@@ -63,20 +63,19 @@
 <br>
   <h5>Moje cesta do krajiny: jak jsem se dostala do CooLAND?</h5>
 
-  <p>Vždycky jsem toužila zabývat se něčím, co má smysl, nebude rutina, bude mě bavit, rozvíjet a pomůže někomu, nebo něčemu dalšímu. Prošla jsem řadou škol, vyzkoušela jsem spoustu aktivit a zaměstnání od hostesky, servírky v kavárně a za barem, ekologické aktivistky, účetní, úřednici veřejné správy, specialistky nákupu ve velké korporátní firmě, práci na zahradě, v lese i za počítačem. Až jsem nakonec zakotvila na Fakultě životního prostředí ČZU v Praze. To nejcennější co jsem tu našla, kromě znalostí o přírodě a krajině, jsou spřátelené duše s podobnou touhou jako mám já… zabývat se něčím, co má smysl, nebude rutina, bude nás bavit, rozvíjet a pomůže někomu, nebo něčemu dalšímu. A proto jsme společně založili CooLAND.</p>
+  <p>Vždycky jsem toužila zabývat se něčím, co má smysl, nebude rutina, bude mě bavit, rozvíjet a pomůže někomu, nebo něčemu dalšímu. Prošla jsem řadou škol, vyzkoušela jsem spoustu aktivit a zaměstnání od hostesky, servírky v kavárně a za barem, ekologické aktivistky, účetní, úřednice, specialistky nákupu ve velké korporátní firmě, práci na zahradě, v lese i za počítačem. Pak jsem na deset let zakotvila na Fakultě životního prostředí ČZU v Praze. To nejcennější co jsem tu našla, kromě znalostí o přírodě a krajině, jsou spřátelené duše s podobnou touhou jako mám já… zabývat se něčím, co má smysl, nebude rutina, bude nás bavit, rozvíjet a pomůže někomu, nebo něčemu dalšímu. A proto jsme společně založili CooLAND.</p>
 
 <h5>V CooLAND mám na starosti:</h5>
 
-  <p>Různorodé předchozí pracovní zkušenosti se v CooLAND hodí, a proto jsem taková „holka pro všechno“, která umí organizovat, trochu fotit i psát, analyzovat data, prezentovat je, ale dělat efektivně i ty nudné „tabulky“, organizační a administrativní práci na pozadí. V současné chvíli jsem především koordinátorka našeho projektu komunitou podporovaného zemědělství <a href="https://plus.google.com/u/0/communities/101783831094360976826" target="_blank">KPZ CooLAND</a> a s tím souvisejících aktivit. Organizuji akce CooLAND, píšu příspěvky na náš blog i jinam a podílím se na naší „výzkumné“ činnosti, kterou chceme postupně rozvíjet.</p>
+  <p>Věnuji se obsahové i organizační stránce CooLAND a propagaci.  V současné chvíli jsem především koordinátorka našeho projektu komunitou podporovaného zemědělství <a href="https://kpzcooland.tumblr.com" target="_blank">KPZ CooLAND</a> a s tím souvisejících aktivit. Organizuji akce CooLAND, píšu příspěvky na náš blog i jinam. Vzdělávám v oblasti alternativních potravinových systémů, kde úzce spolupracuji s <a href="http://asociaceampi.cz/" target="_blank">Asociace místních potravinových iniciativ</a></p>
 
   <h5>Mimo CooLAND dělám:</h5>
 
-  <p>Jsem zaměstnaná na Fakultě životního prostředí ČZU v Praze, kde působím na Katedře aplikované geoinformatiky a územního plánování zejména v roli organizátorky výukových i dalších aktivit a chodu katedry. Dále se do určité míry zabývám výzkumem, jehož téma souvisí s držbou půdy a jejím vlivem na krajinu. </p>
-<p><a href="https://www.researchgate.net/profile/Sarka_Krcilkova" target="_blank">Research Gate</a></p>
+  <p>Od roku 2017 v <a href="http://asociaceampi.cz/" target="_blank">Asociace místních potravinových iniciativ</a> rozvíjím <a href="http://kpzinfo.cz/" target="_blank">komunitou podporovaného zemědělství</a> u nás a jsem zapojená do řady národních i mezinárodních projektů jako výzkumník, lektor a tvůrce vzdělávacích programů.</p>
 
 <h5>Spolupracuji:</h5>
 
-  <p>Jsem součástí <a href="http://asociaceampi.cz/" target="_blank">Asociace místních potravinových iniciativ</a> v oblasti rozvoje <a href="http://kpzinfo.cz/" target="_blank">komunitou podporovaného zemědělství</a>. Léta jsem členem <a href="http://mjstudio.info/" target="_blank">MJ studia - tanečního studia Milany Ježkové</a>, kde už sice nepůsobím jako aktivní tanečnice, ale stále pomáhám vydávat <a href="http://mjstudio.info/casopis.html" target="_blank">Časopis MJ studia</a>.</p> 
+  <p>Jsem součástí <a href="http://asociaceampi.cz/" target="_blank">Asociace místních potravinových iniciativ</a> a mezinárodní sítě <a href="http://http://urgenci.net/" target="_blank">URGENCI</a>. Léta jsem členem <a href="http://mjstudio.info/" target="_blank">MJ studia - tanečního studia Milany Ježkové</a>, kde už sice nepůsobím jako aktivní tanečnice, ale stále pomáhám vydávat <a href="http://mjstudio.info/casopis.html" target="_blank">Časopis MJ studia</a>.</p> 
  
  </div>  
   <br>
