--- a/sarka.html
+++ b/sarka.html
@@ -75,7 +75,7 @@
 
 <h5>Spolupracuji:</h5>
 
-  <p>Jsem součástí <a href="http://asociaceampi.cz/" target="_blank">Asociace místních potravinových iniciativ</a> a mezinárodní sítě <a href="http://http://urgenci.net/" target="_blank">URGENCI</a>. Léta jsem členem <a href="http://mjstudio.info/" target="_blank">MJ studia - tanečního studia Milany Ježkové</a>, kde už sice nepůsobím jako aktivní tanečnice, ale stále pomáhám vydávat <a href="http://mjstudio.info/casopis.html" target="_blank">Časopis MJ studia</a>.</p> 
+  <p>Jsem součástí <a href="http://asociaceampi.cz/" target="_blank">Asociace místních potravinových iniciativ</a> a mezinárodní sítě <a href="http://urgenci.net/" target="_blank">URGENCI</a>. Léta jsem členem <a href="http://mjstudio.info/" target="_blank">MJ studia - tanečního studia Milany Ježkové</a>, kde už sice nepůsobím jako aktivní tanečnice, ale stále pomáhám vydávat <a href="http://mjstudio.info/casopis.html" target="_blank">Časopis MJ studia</a>.</p> 
  
  </div>  
   <br>
